# MOEX_SmartBeta

./: .env  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  run_moex_weekly.bat
data/logs/: calc_bot.log.2025-12-16
data/raw/: 20250905_moex_data.parquet.tmp
src/moex_tools/: MOEX_base_functions.py  calc_bot.py  cli.py  config.py  logging_setup.py
src/moex_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/moex_tools/pipelines/: make_clean.py
src/moex_tools/sources/: divs_bcs.py  divs_finance_marker.py  divs_tinkoff.py  divs_to_adj.py  finance_marker.py  moex.py  splits_investing.py  splits_moex.py  tinkoff_divs.py
src/moex_tools/strategies/: __init__.py
src/moex_tools/strategies/low_volatility/: __init__.py  data.py  main_class.py  pipeline.py  pipelines.py
tests/: test_low_vol_strategy.py
